# Markus

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Cargo.toml  DartConfiguration.tcl  README.md  build.ninja  default.profraw  foo.profraw  layers.md  rules.ninja  tasks.markus  x.markus
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
common/: Cargo.toml
common/src/: counter.rs  lib.rs
docs/: README.md
frontend/: Cargo.toml  build.rs
frontend/src/: ast.rs  diagnostics.rs  gen.rs  lib.rs  parser.rs  program.rs  shared.rs  source.rs  types.rs  verify.rs
frontend/src/parser/: mod.rs  test.rs  tokenizer.rs
frontend/src/program/: gen.rs  program.rs  types.rs
frontend/src/verifier/: functions.rs  mod.rs  pipelines.rs  type_computer.rs  verifier.rs
frontend/tests/: parser.rs
frontend/tree-sitter-markus/: binding.gyp  example-file  grammar.js  index.js  package.json
frontend/tree-sitter-markus/corpus/: action.txt  permission.txt  query.txt  type.txt
frontend/tree-sitter-markus/src/: binding.cc  grammar.json  node-types.json  parser.c
include/: tests.hpp
include/IR/: filter.hpp  permission.hpp  program.hpp  query.hpp  verifier.hpp
include/ast/: permission.hpp  program.hpp  query.hpp  source.hpp
include/backend/: assets.hpp  binding.hpp
include/diagnostics/: controller.hpp  error.hpp
include/indexer/: engine.hpp  index.hpp  meta.hpp
include/ir/: aggregation.hpp  filter.hpp  filterCollection.hpp  layer.hpp  query.hpp
include/parser/: ast.hpp  parser.hpp  permission.hpp  permissions.hpp  query.hpp  range.hpp  scanner.hpp  tokenizer.hpp  types.hpp
include/type/: array.hpp  atomic.hpp  container.hpp  object.hpp  union.hpp  uri.hpp
include/value/: bool.hpp  call.hpp  container.hpp  field.hpp  float.hpp  int.hpp  member.hpp  string.hpp  type.hpp  variable.hpp
include/verifier/: verifier.hpp
include/writer/: container.hpp  directory.hpp  file.hpp
ir/: Cargo.toml
ir/src/: builder.rs  ir.rs  lib.rs  program.rs  sat.rs  selection_test.rs  types.rs  value.rs
ir/tests/: selection.rs
runtimes/js/: a.out  package.json  tsconfig.json  x.c
rust/: Cargo.toml  cov.sh  x.markus
rust/src/: cli.rs  lib.rs  main.rs
rust/tests/: ast.rs  parser.rs  source.rs  tokenizer.rs
src/: lib.rs  main.cpp
src/IR/: filter.cpp  permission.cpp  program.cpp  query.cpp  verifier.cpp
src/__generated__/: file1.cpp
src/ast/: permission.cpp  program.cpp  query.cpp  source.cpp
src/backend/: assets.cpp  c.cpp
src/common/: mod.rs
src/diagnostics/: controller.cpp  error.cpp
src/indexer/: engine.cpp  meta.cpp
src/ir/: aggregation.cpp  filter.cpp  filterCollection.cpp  ir.rs  layer.cpp  query.cpp  selection_test.rs
src/parser/: ast.rs  mod.rs  parser.cpp  permission.cpp  query.cpp  range.cpp  scanner.cpp  source.rs  tokenizer.cpp  types.cpp
src/program/: mod.rs  program.rs
src/type/: array.cpp  atomic.cpp  (+4 more)
suite/: test.py
test/: case.cpp  test.cpp  test.hpp
tests/: is.cpp  main.cpp
tools/: cov-report.py  format.py
(+110 files in other folders)
