[package]
name = "frontend"
version = "0.1.0"
authors = ["Parsa Ghadimi <qti3eqti3e@gmail.com>"]
edition = "2018"

[dependencies]
common = {path = "../common"}
tree-sitter = "0.16.1"
bit-set = "0.5.2"
daggy = "0.7.0"
petgraph = "0.5.1"
strum = "0.18.0"
strum_macros = "0.18.0"

[build-dependencies]
cc="*"
